--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -49,3 +49,22 @@
 .cta a:hover {
   text-decoration: underline;
 }
+@media (max-width: 768px) {
+  .logo img {
+    width: 70px;
+    height:60px;
+  }
+
+  .cta {
+    padding: 3px 10px;
+    font-size: 12px; 
+  }
+
+  .journal-image {
+    width: 25px; 
+  }
+
+  .cta span {
+    line-height: 1.2; 
+  }
+}
